--- a/class-mate/package.json
+++ b/class-mate/package.json
@@ -14,7 +14,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "web-vitals": "^2.1.4"
   },
